--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <li>3)Classical Mechanics(by David Morin)
             <a href="pdfs/Introduction_to_Classical_Mechanics_with.pdf" download>[pdf]</a>
         </li>
+         <li>4)Electricity and Magnetism(by Purcell)
+            <a href="pdfs/electricity_and_magnetism-by-purcell-3ed-ed.pdf" download>[pdf]</a>
+        </li>
       </ol>
       
 
